# pastalinkbot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  bot.py  cspell.json  llm.py  main.py  pa-bot.service.example  pyproject.toml  requirements.txt  runtime.txt
config/: __init__.py  constants.py  settings.py
core/: __init__.py  bot.py
core/handlers/: __init__.py  base.py  commands.py  conversation.py  messages.py
core/models/: __init__.py  intent.py
core/services/: __init__.py  catalog.py  classifier.py  formatter.py  validator.py
data/: pa_bot_links_seed.json
locale/: messages.pot
locale/de/LC_MESSAGES/: messages.po
locale/en/LC_MESSAGES/: messages.po
locale/es/LC_MESSAGES/: messages.po
locale/fr/LC_MESSAGES/: messages.po
locale/it/LC_MESSAGES/: messages.po
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: manage_deps.py  run_tests.py
tests/: conftest.py  test_basic.py  test_handlers.py  test_imports.py
utils/: __init__.py  decorators.py  i18n.py  logging.py
